Agregar imagen de perfil y corregir ruta en HTML

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <header>
         <h1>Kevin David Chavarro Erazo</h1>
         <p>Desarrollador Full Stack</p>
-        <img src="images/Kevin.jpeg" alt="Kevin David Chavarro Erazo" width="200">
+        <img src="images/kevin.jpeg" alt="Kevin David Chavarro Erazo" width="200">
         <p>kevin.chavarro@gmail.com</p>
         <p>Cali, Valle del Cauca</p>
         <p>24 años</p>
