--- a/index.html
+++ b/index.html
@@ -7,58 +7,7 @@
     <meta name="description"
         content="Hoja de vida de Kevin David Chavarro Erazo - Desarrollador Full Stack especializado en JavaScript, Python y tecnologías web modernas">
     <title>Hoja de Vida - Kevin David Chavarro Erazo</title>
-    <style>
-        body {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            color: #333;
-            line-height: 1.6;
-            text-align: center;
-        }
-
-        h2 {
-            color: #555;
-        }
-
-        h1 {
-            color: #2c3e50;
-        }
-
-        .justified-text {
-            text-align: justify;
-            width: 60%;
-            margin: 0 auto;
-        }
-
-        ul,
-        ol {
-            text-align: left;
-            display: inline-block;
-        }
-
-        table {
-            margin: 0 auto;
-        }
-
-        section {
-            margin: 30px 0;
-        }
-
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-            margin: 20px 0;
-        }
-
-        .contact-item {
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -72,21 +21,16 @@
         <p><a href="https://portafolio-henna-psi.vercel.app/" target="_blank">Ver mi portafolio completo</a></p>
     </header>
 
-    <!-- Índice simple -->
     <nav>
         <h3>Índice</h3>
         <ul>
-            <li><a href="#contacto">Información de Contacto</a></li>
+            <li><a href="#contacto">Contacto</a></li>
             <li><a href="#acerca-de-mi">Acerca de Mí</a></li>
             <li><a href="#educacion">Educación</a></li>
-            <li><a href="#idiomas">Idiomas</a></li>
-            <li><a href="#habilidades">Habilidades Técnicas</a></li>
-            <li><a href="#herramientas">Herramientas y Software</a></li>
-            <li><a href="#proyectos">Proyectos Desarrollados</a></li>
-            <li><a href="#experiencia">Experiencia Laboral</a></li>
-            <li><a href="#hobbies">Hobbies e Intereses</a></li>
-            <li><a href="#referencias">Referencias Personales</a></li>
-            <li><a href="#formulario-contacto">Formulario de Contacto</a></li>
+            <li><a href="#habilidades">Habilidades</a></li>
+            <li><a href="#proyectos">Proyectos</a></li>
+            <li><a href="#experiencia">Experiencia</a></li>
+            <li><a href="#formulario-contacto">Contacto</a></li>
         </ul>
     </nav>
 
@@ -141,7 +85,7 @@
 
         <section id="habilidades">
             <h2>HABILIDADES TÉCNICAS</h2>
-            <table border="3" cellpadding="2" style="border-collapse: collapse; width: 30%; text-align: center;">
+            <table border="3" cellpadding="2">
                 <tr>
                     <th>Tecnología</th>
                     <th>Nivel</th>
@@ -331,6 +275,8 @@
             </div>
         </section>
     </footer>
+
+
 </body>
 
 </html>
