--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Hoja de vida de Kevin David Chavarro Erazo - Desarrollador Full Stack especializado en JavaScript, Python y tecnologías web modernas">
     <title>Hoja de Vida - Kevin David Chavarro Erazo</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -37,12 +38,12 @@
     <nav>
         <h3>Índice</h3>
         <ul>
-            <li><a href="#contacto">Contacto</a></li>
-            <li><a href="#acerca-de-mi">Acerca de Mí</a></li>
+            <li><a href="#acerca-de-mi">Sobre Mí</a></li>
             <li><a href="#educacion">Educación</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
             <li><a href="#proyectos">Proyectos</a></li>
             <li><a href="#experiencia">Experiencia</a></li>
+            <li><a href="#horario-semanal">Horario</a></li>
             <li><a href="#formulario-contacto">Contacto</a></li>
         </ul>
     </nav>
@@ -179,14 +180,76 @@
 
         <section id="hobbies">
             <h2>HOBBIES E INTERESES</h2>
-            <p class="justified-text">Me gusta jugar videojuegos en mi tiempo libre, lo cual me
-                ayuda a relajarme y desestresarme después del trabajo. Disfruto haciendo investigaciones sobre
-                inteligencia
-                artificial y sus aplicaciones en diferentes campos tecnológicos.</p>
-            <p class="justified-text">Me apasiona explorar nuevas herramientas para el desarrollo
-                móvil, desktop y web, manteniéndome actualizado con las últimas tendencias. También dedico tiempo a
-                experimentar
-                con frameworks y librerías emergentes que puedan mejorar mi productividad como desarrollador.</p>
+            <p class="justified-text">En mi tiempo libre disfruto de diversas actividades que me ayudan a mantener un equilibrio entre el trabajo y la vida personal:</p>
+            <ul>
+                <li>Jugar videojuegos para relajarme y desestresarme después del trabajo</li>
+                <li>Investigar sobre inteligencia artificial y sus aplicaciones tecnológicas</li>
+                <li>Explorar nuevas herramientas para desarrollo móvil, desktop y web</li>
+                <li>Mantenerme actualizado con las últimas tendencias en tecnología</li>
+                <li>Experimentar con frameworks y librerías emergentes</li>
+                <li>Leer documentación técnica y tutoriales de programación</li>
+                <li>Participar en comunidades de desarrolladores online</li>
+                <li>Practicar algoritmos y estructuras de datos</li>
+            </ul>
+        </section>
+
+        <section id="horario-semanal">
+            <h2>HORARIO SEMANAL DE ACTIVIDADES</h2>
+            <p>Mi rutina semanal típica como desarrollador full stack:</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Día</th>
+                        <th>Mañana (8:00-12:00)</th>
+                        <th>Tarde (13:00-17:00)</th>
+                        <th>Noche (18:00-22:00)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>Lunes</strong></td>
+                        <td>Desarrollo Frontend</td>
+                        <td>Reuniones de equipo</td>
+                        <td>Estudio personal</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Martes</strong></td>
+                        <td>Desarrollo Backend</td>
+                        <td>Testing y debugging</td>
+                        <td>Investigación IA</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Miércoles</strong></td>
+                        <td>Code Review</td>
+                        <td>Desarrollo de APIs</td>
+                        <td>Videojuegos</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Jueves</strong></td>
+                        <td>Base de datos</td>
+                        <td>Documentación</td>
+                        <td>Cursos online</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Viernes</strong></td>
+                        <td>Deploy y DevOps</td>
+                        <td>Planificación</td>
+                        <td>Tiempo libre</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Sábado</strong></td>
+                        <td>Proyectos personales</td>
+                        <td>Ejercicio</td>
+                        <td>Entretenimiento</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Domingo</strong></td>
+                        <td>Descanso</td>
+                        <td>Lectura técnica</td>
+                        <td>Preparación semana</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
 
         <section id="formulario-contacto">
